Implement pagination for the in-memory summary
The in-memory summary of allocations can now be paged and will correctly
handle the last page where there are less than 10 records on that page.

--- a/app/views/allocations/_allocated.html.erb
+++ b/app/views/allocations/_allocated.html.erb
@@ -33,4 +33,13 @@
     <% end %>
     </tbody>
   </table>
+
+  <%= render(
+        :partial => 'shared/pagination',
+        :locals => {
+          :page_data => @allocated_page_meta,
+          :param_name => 'allocated-page',
+          :fragment => 'allocated'
+        })%>
+
 </section>
