--- a/app/views/allocations/_awaiting.html.erb
+++ b/app/views/allocations/_awaiting.html.erb
@@ -26,4 +26,12 @@
     <% end %>
     </tbody>
   </table>
+
+  <%= render(:partial => 'shared/pagination',
+             :locals => {
+              :page_data => @unallocated_page_meta,
+              :param_name => 'unallocated-page',
+              :fragment => 'awaiting-allocation'
+            }) %>
+
 </section>
