Update copy on 'allocate a POM' page

--- a/app/views/allocates/_pom_tables.html.erb
+++ b/app/views/allocates/_pom_tables.html.erb
@@ -51,9 +51,9 @@ Recommendation: <%= @recommended_pom %> POMs
   <summary class="govuk-details__summary">
     <span class="govuk-details__summary-text">
       <% if @prisoner.current_responsibility == 'Probation' %>
-        Prison POMs
+        Show prison officer POMs
       <% else %>
-        Probation POMs
+        Show probation officer POMs
       <% end %>
     </span>
   </summary>
