--- a/app/views/poms/_active.html.erb
+++ b/app/views/poms/_active.html.erb
@@ -1,8 +1,7 @@
 <section class="govuk-tabs__panel" id="active">
   <h2 class="govuk-heading-m">Probation POM</h2>
-  <%= render 'probation_poms_table' %>
+  <%= render :partial => "probation_poms_table", locals: { poms: @active_poms } %>
 
   <h2 class="govuk-heading-m">Prison POM</h2>
-  <%= render 'prison_poms_table' %>
-
+  <%= render :partial => "prison_poms_table", locals: { poms: @active_poms } %>
 </section>
