--- a/app/views/poms/_caseload.html.erb
+++ b/app/views/poms/_caseload.html.erb
@@ -13,19 +13,18 @@
         <a class="table-sorter__link" href="#">Allocation date</a></th>
       <th class="govuk-table__header" scope="col">
         <a class="table-sorter__link" href="#">Role</a></th>
-      <th class="govuk-table__header sorter-false" scope="col">Action</th>
     </tr>
   </thead>
   <tbody class="govuk-table__body">
+    <% @allocations.each do |allocation, sentence| %>
     <tr class="govuk-table__row">
-      <td aria-label="Prisoner name" class="govuk-table__cell ">N/A</td>
-      <td aria-label="Prisoner number" class="govuk-table__cell ">N/A</td>
-      <td aria-label="Release date" class="govuk-table__cell ">N/A</td>
-      <td aria-label="Tier" class="govuk-table__cell ">N/A</td>
-      <td aria-label="Allocation date" class="govuk-table__cell ">N/A</td>
+      <td aria-label="Prisoner name" class="govuk-table__cell "><%= sentence.full_name %></td>
+      <td aria-label="Prisoner number" class="govuk-table__cell "><%= allocation.nomis_offender_id %></td>
+      <td aria-label="Release date" class="govuk-table__cell "><%= sentence.release_date %></td>
+      <td aria-label="Tier" class="govuk-table__cell "><%= allocation.allocated_at_tier %></td>
+      <td aria-label="Allocation date" class="govuk-table__cell "><%= format_date(allocation.created_at) %></td>
       <td aria-label="Role" class="govuk-table__cell ">N/A</td>
-      <td aria-label="Action" class="govuk-table__cell "><a
-          href="">View</a></td>
     </tr>
+    <% end %>
   </tbody>
 </table>
