--- a/app/views/poms/_inactive.html.erb
+++ b/app/views/poms/_inactive.html.erb
@@ -1,9 +1,7 @@
 <section class="govuk-tabs__panel" id="inactive">
   <h2 class="govuk-heading-m">Probation POM</h2>
-  <%= render 'probation_poms_table' %>
+  <%= render :partial => "probation_poms_table", locals: { :poms => @inactive_poms } %>
 
   <h2 class="govuk-heading-m">Prison POM</h2>
-  <%= render 'prison_poms_table' %>
-
-
+  <%= render :partial => "prison_poms_table", locals: { :poms => @inactive_poms } %>
 </section>
