--- a/app/views/poms/_prison_poms_table.html.erb
+++ b/app/views/poms/_prison_poms_table.html.erb
@@ -22,7 +22,7 @@
   </tr>
   </thead>
   <tbody class="govuk-table__body">
-  <% @poms.select{ |pom| pom.position_description.include?('Prison Officer')}.each_with_index do |pom, i| %>
+  <% poms.select{ |pom| pom.position_description.include?('Prison Officer')}.each_with_index do |pom, i| %>
     <tr class="govuk-table__row prison_pom_row_<%= i %>">
       <td aria-label="POM name" class="govuk-table__cell "><%= pom.full_name %></td>
       <td aria-label="Tier A cases" class="govuk-table__cell "><%= pom.tier_a %></td>
@@ -31,9 +31,9 @@
       <td aria-label="Tier D cases" class="govuk-table__cell "><%= pom.tier_d %></td>
       <td aria-label="Total" class="govuk-table__cell "><%= pom.total_cases %></td>
       <td aria-label="Working pattern" class="govuk-table__cell"><%= pom.working_pattern %></td>
-      <td aria-label="Status" class="govuk-table__cell "><%= pom.status %></td>
+      <td aria-label="Status" class="govuk-table__cell "><%= pom.status.capitalize %></td>
       <td aria-label="Action" class="govuk-table__cell "><a
-        href="<%= poms_show_path(id: 1) %>">View</a></td>
+        href="<%= poms_show_path(id: pom.staff_id ) %>">View</a></td>
     </tr>
   <% end %>
   </tbody>
