--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -22,9 +22,9 @@
   <div class="govuk-grid-column-one-third">
     <div class="wrapper">
       <h1 class="govuk-heading-s">
-        <%= link_to "Awaiting tiering", allocations_path(anchor: 'awaiting-tiering'), class:"govuk-link" %>
+        <%= link_to "Awaiting information", allocations_path(anchor: 'awaiting-information'), class:"govuk-link" %>
       </h1>
-      <p class="govuk-body">Prisoners who have not yet had their risk tiering completed</p>
+      <p class="govuk-body">Prisoners for whom we require case information adding before being allocated already</p>
     </div>
   </div>
 </div>
