--- a/app/views/allocations/_awaiting_information.html.erb
+++ b/app/views/allocations/_awaiting_information.html.erb
@@ -11,7 +11,7 @@
     </tr>
     </thead>
     <tbody class="govuk-table__body">
-    <% @offenders_awaiting_tiering.each_with_index do |offender, i| %>
+    <% @summary.missing_info_offenders.each_with_index do |offender, i| %>
       <tr class="govuk-table__row offender_row_<%= i %>">
         <td aria-label="Prisoner full name" class="govuk-table__cell "><%= offender.full_name %></td>
         <td aria-label="Prisoner number" class="govuk-table__cell "><%= offender.offender_no %></td>
@@ -24,5 +24,11 @@
     </tbody>
   </table>
 
-  <%= render '/shared/pagination' %>
+  <%= render(
+          :partial => 'shared/pagination',
+          :locals => {
+              :page_data => @missing_info_page_meta,
+              :param_name => 'missing-info-page',
+              :fragment => 'awaiting-tiering'
+          }) %>
 </section>
