--- a/app/views/allocations/_awaiting.html.erb
+++ b/app/views/allocations/_awaiting.html.erb
@@ -7,7 +7,7 @@
         class='table-sorter__link' href='#'>Prisoner name</th>
       <th class="govuk-table__header sorter-false" scope="col">Prisoner number</th>
       <th class="govuk-table__header sorter-false" scope="col">Arrival date</th>
-      <th class="govuk-table__header sorter-false" scope="col">Release date</th>
+      <th class="govuk-table__header sorter-false" scope="col">Release date/Parole eligibility</th>
       <th class="govuk-table__header header-width__8" scope="col"><a href='#'
                                                                      class='table-sorter__link'>Tier</th>
       <th class="govuk-table__header" scope="col">Action</th>
