--- a/app/views/allocations/_awaiting_information.html.erb
+++ b/app/views/allocations/_awaiting_information.html.erb
@@ -43,6 +43,6 @@
           :locals => {
               :page_data => @missing_info_page_meta,
               :param_name => 'missing-info-page',
-              :fragment => 'awaiting-tiering'
+              :fragment => 'awaiting-information'
           }) %>
 </section>
