Initial pass at 'awaiting allocation for'
This PR uses the sentence_detail model to use the sentenceStartDate as
the point at which the user has been awaiting allocation.  This may need
changing to incorporate the start date of the omic policy if we want to
reduce the number waiting for 000s of days.

We need to get some clarity around these dates as currently on the
awating information tab, this is the number of days as descrived above.
When on the unallocated tab, should "Awaiting allocation for" use the
same sentinel date, or should it be the number of days since the
information was available?

--- a/app/views/allocations/_awaiting_information.html.erb
+++ b/app/views/allocations/_awaiting_information.html.erb
@@ -31,7 +31,7 @@
             Not provided
           <% end %>
         </td>
-        <td aria-label="Awaiting for" class="govuk-table__cell"></td>
+        <td aria-label="Awaiting for" class="govuk-table__cell"><%= offender.awaiting_allocation_for %> days</td>
         <td aria-label="Action" class="govuk-table__cell "><%= link_to "Edit", new_case_information_path(offender.offender_no) %></td>
       </tr>
     <% end %>
