--- a/app/views/allocations/_awaiting.html.erb
+++ b/app/views/allocations/_awaiting.html.erb
@@ -6,7 +6,7 @@
       <th class="govuk-table__header" scope="col"><a
         class='table-sorter__link' href='#'>Prisoner name</th>
       <th class="govuk-table__header sorter-false" scope="col">Prisoner number</th>
-      <th class="govuk-table__header sorter-false" scope="col">Arrival date</th>
+      <th class="govuk-table__header sorter-false" scope="col">Awaiting allocation for</th>
       <th class="govuk-table__header sorter-false" scope="col">Release date/Parole eligibility</th>
       <th class="govuk-table__header header-width__8" scope="col"><a href='#'
                                                                      class='table-sorter__link'>Tier</th>
@@ -18,8 +18,8 @@
       <tr class="govuk-table__row offender_row_<%= i %>">
         <td aria-label="Action" class="govuk-table__cell "><%= offender.full_name %></td>
         <td aria-label="Prisoner number" class="govuk-table__cell "><%= offender.offender_no %></td>
-        <td aria-label="Arrival date" class="govuk-table__cell ">N/A</td>
-        <td aria-label="Release date" class="govuk-table__cell "><%= format_date(offender.release_date) %></td>
+        <td aria-label="Awaiting allocation for" class="govuk-table__cell "><%= offender.awaiting_allocation_for %> days</td>
+        <td aria-label="Release date/Parole eligibility" class="govuk-table__cell "><%= format_date(offender.release_date) %></td>
         <td aria-label="Tier" class="govuk-table__cell "><%= offender.tier %></td>
         <td aria-label="Action" class="govuk-table__cell "><a href="<%= allocates_show_path(offender.offender_no) %>">Allocate</a></td>
       </tr>
