--- a/app/views/poms/new_allocations.html.erb
+++ b/app/views/poms/new_allocations.html.erb
@@ -1,19 +1,4 @@
-<h2 class="govuk-heading-l">My caseload (<%= @allocations.count  %>)</h2>
-
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-one-quarter">
-    <div class="govuk-body">New cases</div>
-    <div class="govuk-body govuk-!-font-weight-bold"><%= link_to "#{@new_allocations.count}", new_allocations_path(@pom.staff_id), class:"govuk-link"%></a></div>
-  </div>
-  <div class="govuk-grid-column-one-quarter">
-    <div class="govuk-body">Working pattern</div>
-    <div class="govuk-body govuk-!-font-weight-bold"><%= @pom.working_pattern %></div>
-  </div>
-  <div class="govuk-grid-column-one-quarter">
-    <div class="govuk-body">Status</div>
-    <div class="govuk-body govuk-!-font-weight-bold"><%= @pom.status.capitalize  %></div>
-  </div>
-</div>
+<h2 class="govuk-heading-l">New allocations</h2>
 
 <table class="govuk-table responsive tablesorter">
   <thead class="govuk-table__head">
@@ -21,6 +6,8 @@
     <th class="govuk-table__header" scope="col"><a
       class='table-sorter__link' href='#'>Prisoner name</a></th>
     <th class="govuk-table__header" scope="col">Prisoner number</th>
+    <th class="govuk-table__header" scope="col">
+      <a class="table-sorter__link" href="#">Arrival date</a></th>
     <th class="govuk-table__header" scope="col">
       <a class="table-sorter__link" href="#">Release date/parole eligibility</a></th>
     <th class="govuk-table__header" scope="col">
@@ -30,13 +17,14 @@
   </tr>
   </thead>
   <tbody class="govuk-table__body">
-  <% @allocations.each do |allocation, sentence| %>
+  <% @new_allocations.each do |allocation, sentence| %>
     <tr class="govuk-table__row">
       <td aria-label="Prisoner name" class="govuk-table__cell "><%= sentence.full_name %></td>
       <td aria-label="Prisoner number" class="govuk-table__cell "><%= allocation.nomis_offender_id %></td>
+      <td aria-label="Arrival date" class="govuk-table__cell ">ARRIVAL DATE</td>
       <td aria-label="Release date" class="govuk-table__cell "><%= format_date(sentence.release_date.to_date) %></td>
       <td aria-label="Allocation date" class="govuk-table__cell "><%= format_date(allocation.created_at) %></td>
-      <td aria-label="Role" class="govuk-table__cell ">N/A</td>
+      <td aria-label="Role" class="govuk-table__cell ">ROLE</td>
     </tr>
   <% end %>
   </tbody>
