Rename Allocations Controller
Rename Allocations Controller to Summary Controller and update all other
areas of the codebase that reference this.

--- a/app/views/case_information/new.html.erb
+++ b/app/views/case_information/new.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => "/shared/backlink", :locals => { :page => allocations_path } %>
+<%= render :partial => "/shared/backlink", :locals => { :page => summary_path } %>
 
 <%= form_tag(case_information_path, method: :post) do %>
   <h1 class="govuk-heading-l govuk-!-margin-top-4">Case information</h1>
