--- a/app/views/allocates/show.html.erb
+++ b/app/views/allocates/show.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => "/shared/backlink", :locals => { :page => allocations_path() } %>
+<%= render :partial => "/shared/backlink", :locals => { :page => summary_path() } %>
 
 <h1 class="govuk-heading-l govuk-!-margin-bottom-5">Allocate a Prison Offender Manager</h1>
 
