--- a/app/views/allocations/show.html.erb
+++ b/app/views/allocations/show.html.erb
@@ -6,8 +6,8 @@
 
 <%= render 'shared/offence_info' %>
 
-<%= render 'allocates/case_information' %>
+<%= render 'allocations/case_information' %>
 
 <hr class="govuk-section-break govuk-section-break--l govuk-section-break--invisible" />
 
-<%= render 'allocates/pom_tables' %>
+<%= render 'allocations/pom_tables' %>
