--- a/app/views/overrides/new.html.erb
+++ b/app/views/overrides/new.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => "/shared/backlink", :locals => { :page => allocates_show_path() } %>
+<%= render :partial => "/shared/backlink", :locals => { :page => allocations_show_path() } %>
 
 <div>
     <%= form_tag(overrides_path, method: :post)  do %>
