--- a/app/views/poms/my_caseload.html.erb
+++ b/app/views/poms/my_caseload.html.erb
@@ -3,7 +3,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-quarter">
     <div class="govuk-body">New cases</div>
-    <div class="govuk-body govuk-!-font-weight-bold"><%= link_to "#{@new_allocations.count}", new_allocations_path(@pom.staff_id), class:"govuk-link"%></a></div>
+    <div class="govuk-body govuk-!-font-weight-bold"><%= link_to "#{@new_cases.count}", new_cases_path(@pom.staff_id), class:"govuk-link"%></a></div>
   </div>
   <div class="govuk-grid-column-one-quarter">
     <div class="govuk-body">Working pattern</div>
