--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -43,7 +43,7 @@
   <div class="govuk-grid-column-one-third">
     <div class="wrapper">
       <h1 class="govuk-heading-s">
-        <%= link_to "New allocations", new_allocations_path(@pom.staff_id), class:"govuk-link" %>
+        <%= link_to "New allocations", new_cases_path(@pom.staff_id), class:"govuk-link" %>
       </h1>
       <p class="govuk-body">Cases allocated to you in the last 7 days.</p>
     </div>
