--- a/app/views/summary/_awaiting.html.erb
+++ b/app/views/summary/_awaiting.html.erb
@@ -21,7 +21,7 @@
         <td aria-label="Awaiting allocation for" class="govuk-table__cell "><%= offender.awaiting_allocation_for %> days</td>
         <td aria-label="Release date/Parole eligibility" class="govuk-table__cell "><%= format_date(offender.release_date) %></td>
         <td aria-label="Tier" class="govuk-table__cell "><%= offender.tier %></td>
-        <td aria-label="Action" class="govuk-table__cell "><a href="<%= allocates_show_path(offender.offender_no) %>">Allocate</a></td>
+        <td aria-label="Action" class="govuk-table__cell "><a href="<%= allocations_show_path(offender.offender_no) %>">Allocate</a></td>
       </tr>
     <% end %>
     </tbody>
