--- a/app/views/summary/_allocated.html.erb
+++ b/app/views/summary/_allocated.html.erb
@@ -15,14 +15,13 @@
     </thead>
     <tbody class="govuk-table__body">
     <% @summary.allocated_offenders.each_with_index do |offender, i| %>
-      <tr class="govuk-table__row offender_row_<%= i %>">
+      <tr class="govuk-table__row allocated_offender_row_<%= i %>">
         <td aria-label="Prisoner name" class="govuk-table__cell"><%= offender.full_name %></td>
         <td aria-label="Prisoner number" class="govuk-table__cell"><%= offender.offender_no %></td>
         <td aria-label="Release date" class="govuk-table__cell"><%= format_date(offender.release_date) %></td>
         <td aria-label="POM" class="govuk-table__cell"><%= offender.allocated_pom_name %></td>
         <td aria-label="Allocation date" class="govuk-table__cell">NA</td>
-        <td aria-label="Action" class="govuk-table__cell "><a
-          href="">Reallocate</a></td>
+        <td aria-label="Action" class="govuk-table__cell "><%= link_to "Reallocate", allocations_show_path(offender.offender_no) %></td>
       </tr>
     <% end %>
     </tbody>
