Enable editing of CaseInformation
This PR now allows for the CaseInformation to be changed for an
offender, so the links on the allocation page will send the user to the
correct place where they tier and case allocation can be changed.

--- a/app/views/allocations/_case_information.html.erb
+++ b/app/views/allocations/_case_information.html.erb
@@ -11,12 +11,15 @@
 
   <tr class="govuk-table__row">
     <td class="govuk-table__cell hmpps-table-cell__key">Case allocation</td>
-    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><%= @prisoner.case_allocation %>
+    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">
+      <a href="<%= edit_case_information_path(@prisoner.offender_no) %>"><%= @prisoner.case_allocation %></a>
     </td>
   </tr>
   <tr class="govuk-table__row">
     <td class="govuk-table__cell hmpps-table-cell__key">Tiering calculation</td>
-    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key"><%= @prisoner.tier %></td>
+    <td class="govuk-table__cell table_cell__left_align hmpps-table-cell__key">
+      <a href="<%= edit_case_information_path(@prisoner.offender_no) %>"><%= @prisoner.tier %></a>
+    </td>
   </tr>
   </tbody>
 </table>
