--- a/app/views/poms/edit.html.erb
+++ b/app/views/poms/edit.html.erb
@@ -1,6 +1,6 @@
 
 
-<%= render :partial => "/shared/backlink", :locals => { :page => poms_show_path(id: 1) } %>
+<%= render :partial => "/shared/backlink", :locals => { :page => edit_pom_path(nomis_staff_id: 1) } %>
 
 <h1 class="govuk-heading-xl govuk-!-margin-bottom-4">Edit profile</h1>
 <h2 class="govuk-heading-l">Surname, Forename</h2>
