--- a/app/views/poms/show.html.erb
+++ b/app/views/poms/show.html.erb
@@ -17,7 +17,7 @@
   </div>
 </div>
 
-<%= link_to("Edit profile", poms_edit_path(id: @pom.staff_id), class: "govuk-button") %>
+<%= link_to("Edit profile", edit_pom_path(nomis_staff_id: @pom.staff_id), class: "govuk-button") %>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-one-quarter">
