--- a/app/views/allocations/_pom_tables.html.erb
+++ b/app/views/allocations/_pom_tables.html.erb
@@ -1,23 +1,23 @@
 <h4 class="govuk-heading-m">
-Recommendation: <%= @recommended_pom %> POMs
+  Recommendation: <%= @recommended_pom %> POMs
 </h4>
 
 <p>Based on the prisoner's tiering calculation.</p>
 
 <table class="govuk-table responsive">
   <thead class="govuk-table__head">
-    <h2 class="govuk-heading-s"><%= @recommended_pom %> POMs</h2>
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col">Name</th>
-      <th class="govuk-table__header" scope="col">Previous allocation</th>
-      <th class="govuk-table__header" scope="col">Tier A cases</th>
-      <th class="govuk-table__header" scope="col">Tier B cases</th>
-      <th class="govuk-table__header" scope="col">Tier C cases</th>
-      <th class="govuk-table__header" scope="col">Tier D cases</th>
-      <th class="govuk-table__header" scope="col">Total</th>
-      <th class="govuk-table__header" scope="col">Working pattern</th>
-      <th class="govuk-table__header" scope="col">Action</th>
-    </tr>
+  <h2 class="govuk-heading-s"><%= @recommended_pom %> POMs</h2>
+  <tr class="govuk-table__row">
+    <th class="govuk-table__header" scope="col">Name</th>
+    <th class="govuk-table__header" scope="col">Previous allocation</th>
+    <th class="govuk-table__header" scope="col">Tier A cases</th>
+    <th class="govuk-table__header" scope="col">Tier B cases</th>
+    <th class="govuk-table__header" scope="col">Tier C cases</th>
+    <th class="govuk-table__header" scope="col">Tier D cases</th>
+    <th class="govuk-table__header" scope="col">Total</th>
+    <th class="govuk-table__header" scope="col">Working pattern</th>
+    <th class="govuk-table__header" scope="col">Action</th>
+  </tr>
   </thead>
   <tbody class="govuk-table__body">
   <% @recommended_poms.each_with_index do |pom, i| %>
@@ -30,13 +30,13 @@ Recommendation: <%= @recommended_pom %> POMs
       <td aria-label="Tier D cases" class="govuk-table__cell "><%= pom.tier_d %></td>
       <td aria-label="Total" class="govuk-table__cell "><%= pom.total_cases %></td>
       <td aria-label="Working pattern" class="govuk-table__cell"><%= pom.working_pattern %></td>
-      <% if current_page?(action: 'show') %>
-        <td aria-label="Action" class="govuk-table__cell table_cell__left_align"><a
-          <%= link_to "Allocate", new_allocations_path(@prisoner.offender_no, pom.staff_id), class:"govuk-link"%></a></td>
-      <% else %>
-        <td aria-label="Action" class="govuk-table__cell table_cell__right_align"><a
-          href="#">Reallocate</a></td>
-      <% end %>
+      <td aria-label="Action" class="govuk-table__cell table_cell__left_align">
+        <% if current_page?(action: :new) %>
+          <%= link_to "Allocate", confirm_allocations_path(@prisoner.offender_no, pom.staff_id), class: "govuk-link" %>
+        <% else %>
+          <%= link_to "Reallocate", confirm_allocations_path(@prisoner.offender_no, pom.staff_id), class: "govuk-link" %>
+        <% end %>
+      </td>
     </tr>
   <% end %>
   </tbody>
@@ -59,43 +59,41 @@ Recommendation: <%= @recommended_pom %> POMs
   </summary>
   <div class="govuk-details__text">
     <table class="govuk-table responsive">
-        <h2 class="govuk-heading-m">
-        </h2>
+      <h2 class="govuk-heading-m">
+      </h2>
       <thead class="govuk-table__head">
-        <tr class="govuk-table__row">
-          <th class="govuk-table__header" scope="col">Name</th>
-          <th class="govuk-table__header" scope="col">Previous allocation</th>
-          <th class="govuk-table__header" scope="col">Tier A cases</th>
-          <th class="govuk-table__header" scope="col">Tier B cases</th>
-          <th class="govuk-table__header" scope="col">Tier C cases</th>
-          <th class="govuk-table__header" scope="col">Tier D cases</th>
-          <th class="govuk-table__header" scope="col">Total</th>
-          <th class="govuk-table__header" scope="col">Working pattern</th>
-          <th class="govuk-table__header" scope="col">Action</th>
-        </tr>
+      <tr class="govuk-table__row">
+        <th class="govuk-table__header" scope="col">Name</th>
+        <th class="govuk-table__header" scope="col">Previous allocation</th>
+        <th class="govuk-table__header" scope="col">Tier A cases</th>
+        <th class="govuk-table__header" scope="col">Tier B cases</th>
+        <th class="govuk-table__header" scope="col">Tier C cases</th>
+        <th class="govuk-table__header" scope="col">Tier D cases</th>
+        <th class="govuk-table__header" scope="col">Total</th>
+        <th class="govuk-table__header" scope="col">Working pattern</th>
+        <th class="govuk-table__header" scope="col">Action</th>
+      </tr>
       </thead>
       <tbody class="govuk-table__body">
-        <% @not_recommended_poms.each_with_index do |pom, i| %>
-          <tr class="govuk-table__row not_recommended_pom_row_<%= i %>">
-            <td aria-label="POM name" class="govuk-table__cell "><%= pom.full_name %></td>
-            <td aria-label="Previous allocation" class="govuk-table__cell">-</td>
-            <td aria-label="Tier A cases" class="govuk-table__cell "><%= pom.tier_a %></td>
-            <td aria-label="Tier B cases" class="govuk-table__cell "><%= pom.tier_b %></td>
-            <td aria-label="Tier C cases" class="govuk-table__cell "><%= pom.tier_c %></td>
-            <td aria-label="Tier D cases" class="govuk-table__cell "><%= pom.tier_d %></td>
-            <td aria-label="Total" class="govuk-table__cell "><%= pom.total_cases %></td>
-            <td aria-label="Working pattern" class="govuk-table__cell"><%= pom.working_pattern %></td>
-            <% if current_page?(action: 'show') %>
-              <td aria-label="Action" class="govuk-table__cell table_cell__left_align"><a
-                <%= link_to "Allocate", new_overrides_path(@prisoner.offender_no, pom.staff_id), class: "govuk-link" %></a>
-              </td>
+      <% @not_recommended_poms.each_with_index do |pom, i| %>
+        <tr class="govuk-table__row not_recommended_pom_row_<%= i %>">
+          <td aria-label="POM name" class="govuk-table__cell "><%= pom.full_name %></td>
+          <td aria-label="Previous allocation" class="govuk-table__cell">-</td>
+          <td aria-label="Tier A cases" class="govuk-table__cell "><%= pom.tier_a %></td>
+          <td aria-label="Tier B cases" class="govuk-table__cell "><%= pom.tier_b %></td>
+          <td aria-label="Tier C cases" class="govuk-table__cell "><%= pom.tier_c %></td>
+          <td aria-label="Tier D cases" class="govuk-table__cell "><%= pom.tier_d %></td>
+          <td aria-label="Total" class="govuk-table__cell "><%= pom.total_cases %></td>
+          <td aria-label="Working pattern" class="govuk-table__cell"><%= pom.working_pattern %></td>
+          <td aria-label="Action" class="govuk-table__cell table_cell__right_align">
+            <% if current_page?(action: :new) %>
+              <%= link_to "Allocate", new_overrides_path(@prisoner.offender_no, pom.staff_id), class: "govuk-link" %>
             <% else %>
-              <td aria-label="Action" class="govuk-table__cell table_cell__right_align"><a
-                href="#">Reallocate</a></td>
+              <%= link_to "Reallocate", new_overrides_path(@prisoner.offender_no, pom.staff_id), class: "govuk-link" %>
             <% end %>
-          </tr>
-        <% end %>
-          </tr>
+          </td>
+        </tr>
+      <% end %>
       </tbody>
     </table>
   </div>
