--- a/app/views/allocations/new.html.erb
+++ b/app/views/allocations/new.html.erb
@@ -1,13 +1,13 @@
-<%= render :partial => "/shared/backlink", :locals => { :page => allocations_show_path() } %>
+<%= render :partial => "/shared/backlink", :locals => { :page => summary_path(anchor: 'awaiting-allocation') } %>
 
-<div>
-    <%= form_tag(allocations_path, method: :post) do %>
-      <h1 class="govuk-heading-xl govuk-!-margin-top-4">Confirm allocation</h1>
-      <p class="govuk-body">You are allocating <%= @prisoner.full_name %> to <%= @pom.full_name %></p>
-      <p class="govuk-body">We'll be using the email address below to let them know about their new allocation</p>
-      <p class="govuk-body govuk-!-font-weight-bold govuk-!-font-size-24 govuk-!-margin-top-6"> POM EMAIL ADDRESS </p>
-      <%= hidden_field_tag("allocate[nomis_offender_id]", @prisoner.offender_no) %>
-      <%= hidden_field_tag("allocate[nomis_staff_id]", @pom.staff_id) %>
-      <%= submit_tag "Complete allocation", role: "button", draggable: "false", class: "govuk-button" %>
-    <% end %>
-</div>
+<h1 class="govuk-heading-l govuk-!-margin-bottom-5">Allocate a Prison Offender Manager</h1>
+
+<%= render 'shared/basic_prisoner_info' %>
+
+<%= render 'shared/offence_info' %>
+
+<%= render 'allocations/case_information' %>
+
+<hr class="govuk-section-break govuk-section-break--l govuk-section-break--invisible" />
+
+<%= render 'allocations/pom_tables' %>
