--- a/app/views/summary/_awaiting.html.erb
+++ b/app/views/summary/_awaiting.html.erb
@@ -1,4 +1,3 @@
-
 <section class="govuk-tabs__panel" id="awaiting-allocation">
   <table class="govuk-table responsive tablesorter">
     <thead class="govuk-table__head">
@@ -8,8 +7,9 @@
       <th class="govuk-table__header sorter-false" scope="col">Prisoner number</th>
       <th class="govuk-table__header sorter-false" scope="col">Awaiting allocation for</th>
       <th class="govuk-table__header sorter-false" scope="col">Release date/Parole eligibility</th>
-      <th class="govuk-table__header header-width__8" scope="col"><a href='#'
-                                                                     class='table-sorter__link'>Tier</th>
+      <th class="govuk-table__header header-width__8" scope="col">
+        <a href='#' class='table-sorter__link'>Tier</a>
+      </th>
       <th class="govuk-table__header" scope="col">Action</th>
     </tr>
     </thead>
@@ -18,10 +18,16 @@
       <tr class="govuk-table__row offender_row_<%= i %>">
         <td aria-label="Action" class="govuk-table__cell "><%= offender.full_name %></td>
         <td aria-label="Prisoner number" class="govuk-table__cell "><%= offender.offender_no %></td>
-        <td aria-label="Awaiting allocation for" class="govuk-table__cell "><%= offender.awaiting_allocation_for %> days</td>
-        <td aria-label="Release date/Parole eligibility" class="govuk-table__cell "><%= format_date(offender.release_date) %></td>
+        <td aria-label="Awaiting allocation for" class="govuk-table__cell ">
+          <%= offender.awaiting_allocation_for %> days
+        </td>
+        <td aria-label="Release date/Parole eligibility" class="govuk-table__cell ">
+          <%= format_date(offender.release_date) %>
+        </td>
         <td aria-label="Tier" class="govuk-table__cell "><%= offender.tier %></td>
-        <td aria-label="Action" class="govuk-table__cell "><a href="<%= allocations_show_path(offender.offender_no) %>">Allocate</a></td>
+        <td aria-label="Action" class="govuk-table__cell ">
+          <a href="<%= new_allocations_path(offender.offender_no) %>">Allocate</a>
+        </td>
       </tr>
     <% end %>
     </tbody>
