--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="govuk-template js flexbox">
   <head>
     <title>Manage Offenders in Custody</title>
     <%= csrf_meta_tags %>
