Create a mapping of prison code -> prison name
Also displays the prison name based on the caseload from the JWToken we
received from SSO.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,7 +10,8 @@
     <ul id="navigation" class="hmpps-header__navigation" aria-label="Top Level Navigation">
       <% if current_user.present? %>
       <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
-        <span class='govuk-body hmpss-header__prison-identifier govuk-!-font-size-16'>HMP Cardiff <span class="govuk-!-padding-left-1">|</span></span>
+        <span class='govuk-body hmpss-header__prison-identifier govuk-!-font-size-16'>
+          <%= PrisonService.name_for(caseload) %><span class="govuk-!-padding-left-1">|</span></span>
         <a href='#' class='govuk-header__link govuk-!-font-size-16 govuk-!-padding-left-1'><%= current_user %></a>
       </li>
       <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
