--- a/app/views/case_information/new.html.erb
+++ b/app/views/case_information/new.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial => "/shared/backlink", :locals => { :page => summary_path(anchor: 'awaiting-information') } %>
+<%= render :partial => "/shared/backlink", :locals => { :page => summary_pending_path } %>
 
 
 <% if @case_info.errors.count > 0 %>
