--- a/app/views/summary/allocated.html.erb
+++ b/app/views/summary/allocated.html.erb
@@ -1,3 +1,7 @@
+<h1 class="govuk-heading-xl">Allocations</h1>
+
+<%= render(:partial => 'tabs_start', :locals => {:active => :allocated}) %>
+
 <section class="govuk-tabs__panel" id="allocated">
   <table class="govuk-table responsive tablesorter">
     <thead class="govuk-table__head">
@@ -14,7 +18,7 @@
     </tr>
     </thead>
     <tbody class="govuk-table__body">
-    <% @summary.allocated_offenders.each_with_index do |offender, i| %>
+    <% @summary.offenders.each_with_index do |offender, i| %>
       <tr class="govuk-table__row allocated_offender_row_<%= i %>">
         <td aria-label="Prisoner name" class="govuk-table__cell"><%= offender.full_name %></td>
         <td aria-label="Prisoner number" class="govuk-table__cell"><%= offender.offender_no %></td>
@@ -28,11 +32,12 @@
   </table>
 
   <%= render(
-        :partial => 'shared/pagination',
-        :locals => {
-          :page_data => @allocated_page_meta,
-          :param_name => 'allocated-page',
-          :fragment => 'allocated'
-        })%>
+          :partial => 'shared/pagination',
+          :locals => {
+              :page_data => @page_meta,
+              :param_name => 'page',
+          }) %>
 
 </section>
+
+<%= render 'tabs_end' %>
