--- a/app/views/summary/unallocated.html.erb
+++ b/app/views/summary/unallocated.html.erb
@@ -1,3 +1,7 @@
+<h1 class="govuk-heading-xl">Allocations</h1>
+
+<%= render(:partial => 'tabs_start', :locals => {:active => :unallocated}) %>
+
 <section class="govuk-tabs__panel" id="awaiting-allocation">
   <table class="govuk-table responsive tablesorter">
     <thead class="govuk-table__head">
@@ -13,7 +17,7 @@
     </tr>
     </thead>
     <tbody class="govuk-table__body">
-    <% @summary.unallocated_offenders.each_with_index do |offender, i| %>
+    <% @summary.offenders.each_with_index do |offender, i| %>
       <tr class="govuk-table__row offender_row_<%= i %>">
         <td aria-label="Prisoner name" class="govuk-table__cell "><%= offender.full_name %></td>
         <td aria-label="Prisoner number" class="govuk-table__cell"><%= offender.offender_no %></td>
@@ -30,11 +34,11 @@
     </tbody>
   </table>
 
-  <%= render(:partial => 'shared/pagination',
-             :locals => {
-              :page_data => @unallocated_page_meta,
-              :param_name => 'unallocated-page',
-              :fragment => 'awaiting-allocation'
-            }) %>
+  <%= render(
+          :partial => 'shared/pagination',
+          :locals => {
+              :page_data => @page_meta,
+              :param_name => 'page',
+          }) %>
 
 </section>
