case info content changes

--- a/app/views/case_information/_form.html.erb
+++ b/app/views/case_information/_form.html.erb
@@ -8,7 +8,7 @@
           Was this prisoner's last known address in Wales?
         </legend>
         <p>
-          Only prisoners with a Welsh address can be allocated a prison or probation POM
+          Only prisoners with a Welsh address will be allocated a responsible<br/> prison or probation POM.
         </p>
 
         <% if @case_info.errors[:welsh_address].present? %>
