--- a/app/views/case_information/new.html.erb
+++ b/app/views/case_information/new.html.erb
@@ -7,7 +7,7 @@
 
 <h1 class="govuk-heading-xl govuk-!-margin-top-4 govuk-!-margin-bottom-4">Case information</h1>
 <h2 class="govuk-heading-m"><%= @prisoner.full_name %> - <%= @prisoner.offender_no %></h2>
-<p class="govuk-!-margin-bottom-8">You can find this information in nDelius</p>
+<p class="govuk-!-margin-bottom-8">You can find this information in NDelius</p>
 
 
 <%= render :partial => "form", :locals => {
