--- a/app/views/poms/new_cases.html.erb
+++ b/app/views/poms/new_cases.html.erb
@@ -1,7 +1,7 @@
 <% if @pom.blank? %>
   <h2 class="govuk-heading-l">No new cases </h2>
 <% else %>
-  <h2 class="govuk-heading-l">New allocations</h2>
+  <h2 class="govuk-heading-l">New cases</h2>
 
   <table class="govuk-table responsive tablesorter">
     <thead class="govuk-table__head">
@@ -14,7 +14,7 @@
       <th class="govuk-table__header" scope="col">
         <a class="table-sorter__link" href="#">Release/parole<br/>eligibility</a></th>
       <th class="govuk-table__header" scope="col">
-        <a class="table-sorter__link" href="#">Allocation date</a></th>
+        <a class="table-sorter__link" href="#">Allocation<br/>date</a></th>
       <th class="govuk-table__header" scope="col">
         <a class="table-sorter__link" href="#">Role</a></th>
     </tr>
