--- a/app/views/poms/edit.html.erb
+++ b/app/views/poms/edit.html.erb
@@ -49,13 +49,12 @@
               <%= label_tag "edit_pom[status]", "Active", class: "govuk-label govuk-radios__label" %>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="status-conditional-2" name="edit_pom[status]" type="radio" value="active-at-capacity" data-aria-controls="status-2" <%= 'checked' if @pom.status == 'active-at-capacity'%>>
+              <input class="govuk-radios__input" id="status-conditional-2" name="edit_pom[status]" type="radio" value="unavailable" data-aria-controls="status-2" <%= 'checked' if @pom.status == 'active-unavailable'%>>
               <label class="govuk-label govuk-radios__label"
-                     for="status-conditional-2">Active - at capacity (no new cases)</label>
+                     for="status-conditional-2">Active but unavailable for new cases</label>
             </div>
             <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="status-2">
-              <h4 class="govuk-heading-s">You will not be able to allocate new cases to this POM. To allocate new cases
-                again, set their status to active</h4>
+              <h4 class="govuk-heading-s">To allocate to this POM you will need to change their status to active</h4>
             </div>
             <div class="govuk-radios__item">
               <input class="govuk-radios__input" id="status-conditional-3" name="edit_pom[status]" type="radio" value="inactive" data-aria-controls="status-3"  <%= 'checked' if @pom.status == 'inactive'%>>
@@ -63,14 +62,7 @@
                      for="status-conditional-3">Inactive</label>
             </div>
             <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="status-3">
-              <div class="govuk-warning-text">
-                <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-                <strong class="govuk-warning-text__text">
-                  <span class="govuk-warning-text__assistive">Warning</span>
-                  This will remove the pom from their current cases.<br/>
-                  Their cases will need to be reallocated.
-                </strong>
-              </div>
+              <h4 class="govuk-heading-s">If this POMs status becomes inactive their cases will need to be reallocated</h4>
             </div>
           </div>
         </fieldset>
